probably one of the only good suggestions TBH
please be the last edit

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ getStylesheet();
     <div id="container">
         <div id="content">
             <h1><i>Hey there, I'm Alyssa McDevitt</i></h1>
-            <p>Computer Science student that likes Lilly Pulitzer clothing, sweet tea, music, and memes. Lover of all things Apple. Currently pouring my heart and soul into <a href="http://noisehubapp.com">NoiseHub</a>. <!--please check out noisehub. it's my baby <3 -->Just trying to learn more about this great big world. Feel free to check out the links below</p>
+            <p>Computer Science student that likes Lilly Pulitzer clothing, sweet tea, music, and memes. Lover of all things Apple. Currently pouring my heart and soul into <a href="http://noisehubapp.com" _target="blank">NoiseHub</a>. <!--please check out noisehub. it's my baby <3 -->Just trying to learn more about this great big world. Feel free to check out the links below</p>
             <br/><br/>
             <div id="links">
-                <a class="link" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
-                <a class="link" href="https://twitter.com/amcdevitt97">Twitter</a>
-                <a class="link" href="https://github.com/amcdevitt97">GitHub</a>
+                <a class="link"_target="blank" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
+                <a class="link" _target="blank" href="https://twitter.com/amcdevitt97">Twitter</a>
+                <a class="link" _target="blank" href="https://github.com/amcdevitt97">GitHub</a>
             </div>
         </div>
         <div id="background"></div>
