--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ getStylesheet();
                 <a class="link"_target="blank" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
                 <a class="link" _target="blank" href="https://twitter.com/amcdevitt97">Twitter</a>
                 <a class="link" _target="blank" href="https://github.com/amcdevitt97">GitHub</a>
+                <a class="link" _target="blank" href="McDevitt_Alyssa_resume.pdf">Resume</a>
+
             </div>
         </div>
         <div id="background"></div>
