--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ getStylesheet();
     <div id="container">
         <div id="content">
             <h1><i>Hey there, I'm Alyssa McDevitt</i></h1>
-            <p>Computer Science student that likes Lilly Pulitzer clothing, <strike>sweet tea</strike> Odwalla, music, and memes. Lover of all things Apple. Currently pouring my heart and soul into <a href="http://noisehubapp.com" _target="blank">NoiseHub</a>. <!--please check out noisehub. it's my baby <3 -->Just trying to learn more about this great big world. Feel free to check out the links below</p>
+            <p>Computer Science student that likes Lilly Pulitzer clothing, sweet tea, music, and memes. Lover of all things Apple. Currently pouring my heart and soul into <a href="http://noisehubapp.com" _target="blank">NoiseHub</a>. <!--please check out noisehub. it's my baby <3 -->Just trying to learn more about this great big world. Feel free to check out the links below</p>
             <br/><br/>
             <div id="links">
                 <a class="link"_target="blank" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
