--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div id="container">
         <div id="content">
             <h1><i>Hey there, I'm Alyssa McDevitt</i></h1>
-            <p>Computer Science student that likes Lilly Pulitzer clothing, sweet tea, music, and memes. Lover of all things tech and futuristic. Currently working on <a href="http://noisehubapp.com" _target="blank">NoiseHub</a> and school. <!--please check out noisehub. it's my baby <3 -->Just trying to learn more about this great big world. Feel free to check out the links below.</p>
+            <p>Computer Science student that likes Lilly Pulitzer clothing, sweet tea, music, and memes. Lover of all things tech and futuristic.
+             Used to work on <a href="http://noisehub.co" _target="blank">NoiseHub</a> and a few other side projects. <!--please check out noisehub. it's my baby <3 -->
+             Just trying to learn more about this great big world. Feel free to check out the links below.</p>
             <br/><br/>
             <div id="links">
                 <a class="link"_target="blank" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
