Updated description for fall 2018

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="content">
             <h1><i>Hey there, I'm Alyssa McDevitt</i></h1>
             <p>Computer Science student at York College of Pennsylvania. Lover of all things tech and futuristic.
-             Currently working at <a href="https://andculture.com/" >AndCulture</a> this summer. Used to work on <a href="http://noisehub.co" _target="blank">NoiseHub</a> and a few other side projects. <!--please check out noisehub. it's my baby <3 -->
+             Worked at <a href="https://andculture.com/" >AndCulture</a> this past summer. Used to work on <a href="http://noisehub.co" _target="blank">NoiseHub</a> and a few other side projects. <!--please check out noisehub. it's my baby <3 -->
              Just trying to learn more about this great big world. Feel free to check out the links below.</p>
             <br/><br/>
             <div id="links">
