--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!--DOCTYPE html -->
-<html>
-
-<head>
-	<title>Alyssa McDevitt</title>
-	<link rel="icon" href="images/me.png">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700italic" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="script.js" ></script>
-	<!--if you cant run scripts, default to main CSS-->
-	<noscript><link href="main.css" rel="stylesheet"></noscript>
-</head>
-
-<!--end head, start body-->
-<body onload='getNewGif()'>
-    <!--my face, click it for tunes. also, stuff about me.-->
-    <img id="me" onclick="music()">
-    <div id="container">
-        <div id="content">
-            <h1><i>Hey there, I'm Alyssa McDevitt</i></h1>
-            <p>Computer Science student at York College of Pennsylvania. Lover of all things tech and futuristic.
-             Worked at <a href="https://andculture.com/" >AndCulture</a> this past summer. Used to work on <a href="http://noisehub.co" _target="blank">NoiseHub</a> and a few other side projects. <!--please check out noisehub. it's my baby <3 -->
-             Just trying to learn more about this great big world. Feel free to check out the links below.</p>
-            <br/><br/>
-            <div id="links">
-                <a class="link"_target="blank" href="https://www.linkedin.com/in/alyssa-mcdevitt-23b89294">LinkedIn</a>
-                <a class="link" _target="blank" href="https://github.com/amcdevitt97">GitHub</a>
-                <a class="link" _target="blank" href="McDevitt_Alyssa_resume.pdf">Resume</a>
-
-            </div>
-        </div>
-        <div id="background"></div>
-    </div>
-    <!--end stuff about me-->
-    <!--hidden music doodads-->
-    <audio id="nightAudio" style="visibility:hidden;" controls>
-        <source src="music/night.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <audio id="sunriseAudio" style="visibility:hidden;" controls>
-        <source src="music/sunrise.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-    </audio>
-    <audio id="dayAudio" style="visibility:hidden;" controls>
-        <source src="music/day.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-    </audio>
-    <!--end hidden music doodads-->
-</body>
-
-<!--FYI if you're a recruiter or someone important, please know i'm a professional and wouldn't actually do all this unnecessary commenting to any company projects. Just wanted to be a goof for this site. Much love and please accept me, -A -->
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link href="/static/css/main.6cc4937c.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],f=0,i=[];f<n.length;f++)t=n[f],p[t]&&i.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=f(f.s=t[0]))}return e}var t={},p={1:0},c=[];function f(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,f),r.l=!0,r.exports}f.m=l,f.c=t,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(r,e){if(1&e&&(r=f(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)f.d(t,n,function(e){return r[e]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var r=window.webpackJsonp=window.webpackJsonp||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;a()}([])</script><script src="/static/js/2.2f23f1fb.chunk.js"></script><script src="/static/js/main.503fa66c.chunk.js"></script></body></html>
